--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio - Nelson Saco</title>
-  <link rel="stylesheet" href="estilos/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -110,6 +110,6 @@
     <p>&copy; 2026 Nelson Saco. Todos os direitos reservados.</p>
   </footer>
 
-  <script src="scripts/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
